
Version 0.3.2dev (TBA)
======================

Enhancements:

  * Dialog API for plugins and commands to use.
  * Speedbar API for plugins and commands to use (e.g. Goto Line command).
  * Remembers last directory when opening a file/directory. (thanks Roger Pack)
  * Word movement (alt-left, alt-right) now works as it should in an editor for
    programmers.
  * Somewhat faster startup time.
  * Nicer error message when jruby jar is missing.

Internal changes:

  * Ported plugins to plugin_manager gem (github.com/danlucraft/plugin_manager)
  * Pure Ruby clipboard and Copy/Cut/Paste commands.

Fixes:

  * Cut/Copy sometimes didn't work.
  * The show more tabs menu in a notebook is handled properly.
  * Deleting a lot of lines no longer causes the last few to lose highlighting.

Version 0.3.1dev (9 Jan 2010)
=============================

Enhancements:

  * Fuzzy file finder.
  * Directory tree refreshes on window focus.
  * Keybindings to switch tabs and notebooks.
  * Undo/redo.
  * Home/end keys.
  * Modified tabs have little stars before their names.
  * Increase indent and decrease indent commands (need further work).
  * Themes support bold, italic and underline again.
  * All commands are greyed out when inapplicable.
  * Files can not be opened twice.
  * Added Java, Perl and Ruby on Rails bundles.
  * New simpler way for bundles to add commands to menus (used in repl.rb)
  * New "redcar install" command to download jars.
  
Fixes:

  * Change key logic in JavaMateView - should fix a bunch of subtle highlighting bugs.
  * Runs on Java 5.
  * Open Directory doesn't log an error if you cancel.

Version 0.3.0dev (25 Dec 2009)
==============================

Rewritten in JRuby/SWT.

Enhancements:
  
  * _Much_ simpler installation: packaged as a gem.
  * Faster highlighter
  * Fewer bugs
  * Clearer architecture
  * Multiple window/project support.


Version 0.2 (28 May 2009)
=========================

New features, enhancements:
